package com.aubrey.jetcomic.model

data class OrderComic(
    val comic: Comic,
    val count: Int
)
